<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieActivity"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/imageBackdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="parallax"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:layout_collapseMode="pin"
                app:contentInsetLeft="0dp"
                app:contentInsetStart="0dp">
                <ImageView
                    android:id="@+id/backButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="7dp"
                    android:contentDescription="@string/back_button"
                    android:src="@drawable/ic_baseline_arrow_back_30"/>
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/imagePoster"
                android:layout_width="100dp"
                android:layout_height="120dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/textOverview"/>
            <TextView
                android:id="@+id/textTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="@string/movie_title"
                android:layout_marginTop="5dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintStart_toEndOf="@id/imagePoster"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/textYearAndRuntime"
                app:layout_constraintTop_toTopOf="@id/imagePoster"/>

            <TextView
                android:id="@+id/textYearAndRuntime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="@string/release_date"
                android:textColor="@color/colorDarkGrey"
                android:textSize="14sp"
                android:layout_marginEnd="10dp"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="@id/textTitle"
                app:layout_constraintTop_toBottomOf="@id/textTitle"
                app:layout_constraintBottom_toTopOf="@id/textGenres"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                android:id="@+id/textGenres"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorDarkGrey"
                android:textSize="14sp"
                tools:text="@string/genre_dummy"
                android:layout_marginEnd="10dp"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintTop_toBottomOf="@id/textYearAndRuntime"
                app:layout_constraintStart_toStartOf="@id/textYearAndRuntime"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/imagePoster"/>

            <TextView
                android:id="@+id/textOverview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="@string/empty_overview"
                android:textColor="@color/colorGrey"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/imagePoster"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tabLayout"
                android:layout_margin="10dp"/>


            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textOverview"
                app:layout_constraintBottom_toTopOf="@id/viewPager"
                app:tabGravity="fill"
                app:tabIndicatorHeight="1.1dp"
                app:tabIndicatorColor="@color/colorWhite"
                app:tabTextAppearance="@style/MyCustomTextAppearance" />


            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tabLayout"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>